--- a/scripts/tokenswap/context/Dockerfile
+++ b/scripts/tokenswap/context/Dockerfile
@@ -1,6 +1,6 @@
 FROM synlay/cardano-node:${CARDANO_NODE_VERSION:-latest}
 
-RUN apt-get install -y tcl xxd
+RUN apt-get install -y --no-install-recommends tcl xxd
 
 COPY astor.tcl tokenswap/
 COPY common tokenswap/common
