--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,24 +11,27 @@ jobs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
         extra_nix_config: |
-          trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
-          substituters = https://hydra.iohk.io https://cache.nixos.org/
-    # - run: nix-env -i docker niv
-    - uses: uraimo/run-on-arch-action@v2
-      name: Run commands
-      id: runcmd
-      with:
-        arch: aarch64
-        distro: ubuntu_latest
+          experimental-features = nix-command flakes
+          allow-import-from-derivation = true
+          substituters = https://cache.nixos.org https://hydra.iohk.io
+          trusted-public-keys = iohk.cachix.org-1:DpRUyj7h7V830dp/i6Nti+NEO2/nhblbov/8MW7Rqoo= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
 
-        # # Not required, but speeds up builds by storing container images in
-        # # a GitHub package registry.
-        # githubToken: ${{ github.token }}
+    # - uses: uraimo/run-on-arch-action@v2
+    #   name: Run commands
+    #   id: runcmd
+    #   with:
+    #     arch: aarch64
+    #     distro: ubuntu_latest
 
-        # Set an output parameter `uname` for use in subsequent steps
-        run: |
-          uname -a
-          echo ::set-output name=uname::$(uname -a)
-          ./build.sh cardano-node false
+    #     # # Not required, but speeds up builds by storing container images in
+    #     # # a GitHub package registry.
+    #     # githubToken: ${{ github.token }}
 
-    # - run: ./build.sh cardano-node false
+    #     # Set an output parameter `uname` for use in subsequent steps
+    #     run: |
+    #       uname -a
+    #       echo ::set-output name=uname::$(uname -a)
+    #       ./build.sh cardano-node false
+
+    - run: ./build.sh cardano-node false
+    # - run: nix-shell -p haskell.compiler.ghc8107
