--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
     #       ./build.sh cardano-node false
 
     # - run: nix-env -i haskell.compiler.ghc8107
-    - run: nix-env -qaP -A nixpkgs.haskellPackages cabal-install
-    - run: nix-env -i nixpkgs.haskellPackages.cabal-install-3.6.2.0
+    # - run: nix-env -qaP -A nixpkgs.haskellPackages cabal-install
+    - run: nix-env -i cabal-install-3.6.2.0
     # - run: nix-shell -p haskell.compiler.ghc8107 cabal-install-3.6.2.0
     - run: nix-shell -p haskell.compiler.ghc8107 --quiet --run "./build.sh cardano-node false"
