--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,5 +46,5 @@ jobs:
     - uses: actions/checkout@v3
     - run: nix-shell -p haskell.compiler.ghc8107
     - run: ghcup set cabal 3.6.2.0 && ghcup set cabal 3.6.2.0
-    - run: cabal --version
-    # - run: ./build.sh cardano-node false
+    # - run: cabal --version
+    - run: ./build.sh cardano-node false
