--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
     # - run: nix-shell -p haskell.compiler.ghc8107 --quiet --run "./build.sh cardano-node false"
     - uses: actions/checkout@v3
     - run: nix-shell
-    - run: ghcup set ghc 8.10.7 && ghcup set ghc 8.10.7
-    - run: ghcup set cabal 3.6.2.0 && ghcup set cabal 3.6.2.0
+    - run: ghcup install ghc 8.10.7 && ghcup set ghc 8.10.7
+    - run: ghcup install cabal 3.6.2.0 && ghcup set cabal 3.6.2.0
     # - run: cabal --version
     - run: ./build.sh cardano-node false
