Try to fix trace-dispatcher build error

--- a/nix/cardano/Dockerfile
+++ b/nix/cardano/Dockerfile
@@ -104,6 +104,11 @@ RUN echo "package cardano-crypto-praos" >> cabal.project.local
 RUN echo "  flags: -external-libsodium-vrf" >> cabal.project.local
 RUN echo "" >> cabal.project.local
 
+# 1.35.4 - Hotfix for build error
+RUN echo "package tx-generator" >> cabal.project.local
+RUN echo "  ghc-options: -XConstraintKinds" >> cabal.project.local
+RUN echo "" >> cabal.project.local
+
 # Can no longer build cardano-node on arm64
 # https://github.com/input-output-hk/cardano-node/issues/3395
 RUN echo "package trace-dispatcher" >> cabal.project.local
