Update sources for 8.1.1 bump

--- a/nix/cardano/Dockerfile
+++ b/nix/cardano/Dockerfile
@@ -10,7 +10,7 @@ ARG ARCH
 
 ## Install dependencies, secp256k1 and libsodium #################################################################################
 
-FROM debian:11-slim as buildera
+FROM debian:12-slim as buildera
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -19,7 +19,11 @@ RUN apt-get update \
   && apt-get install -y \
     autoconf automake build-essential g++ git jq \
     libffi-dev libgmp-dev libncursesw5 libnuma-dev libssl-dev libsystemd-dev libtinfo-dev libtool llvm \
-    make pkg-config tmux wget zlib1g-dev
+    make pkg-config tmux wget zlib1g-dev \
+    libsodium23 libsodium-dev \
+    libsystemd0 libsystemd-dev \
+  && apt-get -y remove --purge software-properties-common \
+  && apt-get -y autoremove
 
 # Install secp256k1
 WORKDIR /src
@@ -37,7 +41,7 @@ RUN ./autogen.sh \
 WORKDIR /src
 RUN git clone https://github.com/input-output-hk/libsodium
 WORKDIR libsodium
-RUN git checkout 66f017f1
+RUN git reset --hard dbb48cce5429cb6585c9034f002568964f1ce567
 RUN ./autogen.sh \
   && ./configure \
   && make install
